[Update] ヘッダーを追加

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>DWCコンテンツ 【HTML・CSSの基本書式を学ぼう】4章 演習問題</title>
   </head>
   <body>
-
+    <header class="header"></header>
   </body>
 </html>
