[Update] メインビジュアルを追加

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <header class="header"></header>
+
+    <div class="main-visual"></div>
+
     <footer class="footer"></footer>
   </body>
 </html>
