--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
     <div class="main-visual"></div>
 
+    <div class="main">
+      <div class="main-inner"></div>
+    </div>
+
     <footer class="footer"></footer>
   </body>
 </html>
